add second content block

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
 <div class="wrapper">
     <div class="image"></div>
-    <div class="content-block"></div>  
-    <input type="text" name="input-val">
+    <div class="content-block1"></div>  
+    <input type="text" name="input-val1">
+    <div class="content-block2"></div>
+    <input type="text" name="input-val2">
 </div>
     <script src="./scripts/main.js"></script>
 </body>
