--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
 <div class="wrapper">
     <div class="image"></div>
     <div class="content-block1"></div>  
-    <input type="text" name="input-val1">
-    <div class="content-block2"></div>
-    <input type="text" name="input-val2">
+    <input type="text" name="input-val1" placeholder="метод change">
+    <div class="content-block2"></div>  
+    <input type="text" name="input-val2" placeholder="метод click в это же поле">
+    <div class="content-block3"></div>
+    <div class="input-click">
+        <input type="text" name="input-val3" placeholder="ввести текст и клик на кнопку"> 
+        <button type="button" name="button" class="button">OK!</button>
+    </div>
 </div>
     <script src="./scripts/main.js"></script>
 </body>
